# AH_03_07

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  backend_README.md  chat_engine.py  chat_models.py  chat_schemas.py  clinical_models.py  clinical_schemas.py  consent_mode_disease_models.py  consent_mode_disease_schemas.py  database.py  docker-compose.yml  extra_models.py  extra_schemas.py  guide_engine.py  guide_models.py  guide_schemas.py  guide_v2_models.py  guide_v2_schemas.py  main.py  medical_record_models.py  medical_record_schemas.py  models.py  nginx.conf  notification_models.py  notification_schemas.py  ocr_engine.py  ocr_models.py  ocr_schemas.py  postmvp_models.py  postmvp_schemas.py  pubspec.yaml  pyproject.toml  requirements.txt  schemas.py  security.py
.github/: PULL_REQUEST_TEMPLATE.md  commit_template.txt
.github/workflows/: checks.yml  frontend-ci.yml  sync-to-fork.yml
_legacy/: chat_models.py  clinical_models.py  extra_models.py  mvp_apis.csv  ocr_engine.py  postmvp_models.py  read_excel.py  read_excel2.py  search_xlsx.py
_legacy/routers/: chats.py  dashboard.py  guides.py  users.py
ai_worker/: .dockerignore  Dockerfile  main.py  worker_queues.py
ai_worker/core/: __init__.py  celery_app.py  config.py  logger.py  qdrant_init.py  queue_config.py
ai_worker/tasks/: content_tasks.py  embedding.py  feedback_aggregation_tasks.py  llm_tasks.py  ml_tasks.py  notification_tasks.py  ocr_tasks.py  prescription_end_alert_tasks.py
ai_worker/tests/: test_chunker.py  test_pdf_parser.py  test_prescription_end_alert_tasks.py
ai_worker/utils/: chunker.py  pdf_parser.py
app/: .dockerignore  Dockerfile  main.py  test_search.py
app/core/: config.py  (+2 more)
docs/: 7조_API_명세서_최종.xlsx  7조_요구사항 정의서_진짜최종.xlsx
envs/: example.local.env  example.prod.env
frontend/: .gitignore  jest.config.mjs  next.config.mjs  package-lock.json  package.json  pubspec.yaml  tailwind.config.ts
lib/: chat_page.dart  chip_section.dart  contents_page.dart  dashboard_page.dart  guides_page.dart  home_page.dart  login_page.dart  main.dart  medical_records_page.dart  my_page.dart  notification_settings_page.dart  notifications_page.dart  ocr_history_page.dart  pill_page.dart  search_page.dart  signup_page.dart  splash_screen.dart  user_edit_page.dart  user_type_page.dart
nextjs/: package-lock.json  package.json
routers/: auth.py  chats.py  clinical.py  consent_mode_disease.py  dashboard.py  extra.py  guide_v2.py  guides.py  medical_documents.py  medical_records.py  notifications.py  ocr.py  postmvp.py  social_auth.py  users.py
scripts/: certbot.sh  cleanup_qdrant_orphans.py  deployment.sh  ingest_kb_v2.py
utils/: clova_ocr.py  email.py
(+486 files in other folders)
